# pqc-folder-encryptor

./: CHANGELOG.md  CODE_OF_CONDUCT.md  NOTICE  README.md  SECURITY.md  check_env.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
pqc_folder_encryptor/: __init__.py  __main__.py  cli.py  config.py  container.py  crypto.py  exceptions.py  gui.py  key_management.py  manifest.py  secure_memory.py  signing.py  validation.py
tests/: test_roundtrip.py  test_vectors.py
